2022-06-02  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (TESTS): Add run-debuginfod-federation-metrics.sh
	only when OLD_LIBMICROHTTPD conditional is not set.

2022-04-24  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-webapi-concurrency.sh: Fix PR number in xfail.

2022-04-23  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-webapi-concurrency.sh: Lower parallel lookups.

2022-03-01  Di Chen <dichen@redhat.com>

	* alldts.c (dtflags): Put DT_NULL last.
	* run-alldts.sh: NULL comes last.
	* run-readelf-d.sh: Adjust Dynamic entries, remove DT_NULL
	padding.

2022-04-14  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-federation-sqlite.sh: Don't try to corrupt
	sqlite database.

2022-04-13  Aaron Merey  <amerey@redhat.com>

	* Makefile.am (TESTS): Remove run-debuginfod-000-permission.sh
	and add run-debuginfod-negative-cache.sh.
	(EXTRA_DIST): Likewise.
	* run-debuginfod-federation-link.sh: Update comments about
	negative-hit file.
	* run-debuginfod-federation-metrics.sh: Likewise.
	* run-debuginfod-federation-sqlite.sh: Likewise.
	* run-debuginfod-tmp-home.sh: Likewise.

2022-03-20  Mark Wielaard  <mark@klomp.org>

	* run-large-elf-file.sh: Check elf class of addsections binary.

2021-12-17  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-query-retry.sh: Use /bin/sh instead of /bin/ls.

2021-12-09  Frank Ch. Eigler  <fche@redhat.com>

	* debuginfod-subr.sh (xfail): New proc.
	* run-debuginfod-webapi-concurrency.sh: New test for -C.
	* Makefile.am: List it.

2021-12-04  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (EXTRA_NLIST_CFLAGS): New variable depends on
	USE_ADDRESS_SANITIZER.
	(test_nlist_CFLAGS): Add EXTRA_NLIST_CFLAGS.

2021-12-04  Mark Wielaard  <mark@klomp.org>

	* varlocs.c (dwarf_encoding_string): Return "<unknown encoding>" instead
	of NULL.
	(dwarf_tag_string): Return "<unknown tag>" instead of NULL.
	(dwarf_attr_string): Return "<unknown attr>" instead of NULL.
	(dwarf_form_string): Return "<unknown form>" instead of NULL.